# bridge

./: .gitignore  local.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dds_jni.cpp
app/src/main/cpp/dds/: .bazelrc  .gitignore  BUILD.bazel  Build  CPPVARIABLES.bzl  ChangeLog  Doxyfile  MODULE.bazel  README.md
app/src/main/cpp/dds/doc/: README_2_9_0.md
app/src/main/cpp/dds/docs/: BUILD_SYSTEM.md  api_migration.md  c++_interface.md  legacy_c_api.md  python_interface.md  wasm_build.md
app/src/main/cpp/dds/examples/: BUILD.bazel  README  analyse_all_plays_bin.cpp  analyse_all_plays_pbn.cpp  analyse_play_bin.cpp  analyse_play_pbn.cpp  calc_all_tables.cpp  calc_all_tables_pbn.cpp  calc_dd_table.cpp  calc_dd_table_pbn.cpp  calc_par_context_example.cpp  dealer_par.cpp  hands.cpp  hands.hpp  migration_example.cpp  par.cpp  solve_all_boards.cpp  solve_board.cpp  solve_board_pbn.cpp
app/src/main/cpp/dds/python/: BUILD.bazel  test_utils.py
app/src/main/cpp/dds/python/src/: bindings.cpp  converters.cpp  converters.hpp
app/src/main/cpp/dds/python/tests/: README.md  test_calc_par.py  test_calc_par_simple.py  test_calc_tables.py  test_calc_tables_regression.py  test_context_reuse.py  test_import.py  test_par.py  test_solve_all_boards.py  test_solve_board.py  test_type_conversions.py
app/src/main/cpp/dds/solution/: DDS.vcxproj  DDS.vcxproj.filters  Directory.Build.props  Solution.slnx  analyse_all_plays_bin.vcxproj  analyse_all_plays_bin.vcxproj.filters  analyse_play_bin.vcxproj  analyse_play_bin.vcxproj.filters  analyse_play_pbn.vcxproj  analyse_play_pbn.vcxproj.filters  calc_all_tables.vcxproj  calc_all_tables.vcxproj.filters  calc_all_tables_pbn.vcxproj  calc_all_tables_pbn.vcxproj.filters  calc_dd_table.vcxproj  calc_dd_table.vcxproj.filters  calc_par_context_example.vcxproj  calc_par_context_example.vcxproj.filters  dealer_par.vcxproj  dealer_par.vcxproj.filters  hands.vcxproj  hands.vcxproj.filters  migration_example.vcxproj  migration_example.vcxproj.filters  par.vcxproj  par.vcxproj.filters  solve_all_boards.vcxproj  solve_all_boards.vcxproj.filters  solve_board.vcxproj  solve_board.vcxproj.filters  solve_board_pbn.vcxproj  solve_board_pbn.vcxproj.filters
app/src/main/java/com/example/bridge/: BiddingManager.java  BridgitDemo.java  CardAdapter.java  DdsSolver.java  GameActivity.java  GameActivityHistory.java  GameActivityTop.java  GameController.java  GameHistory.java  HistoryActivity.java  HistoryListAdapter.java  LocaleHelper.java  LoginActivity.java  MainActivity.java  ResultActivity.java  SettingsActivity.java  SharedPref.java  StartActivity.java  Test.java
app/src/main/java/com/example/bridge/bidding/: Plesik.java  faq
app/src/main/java/com/example/bridge/bridgit/: Auction.java  BidRule.java  Bidder.java  BiddingState.java  BiddingSystem.java  BridgitDemo.java  Call.java  CallAnnotation.java  CallDetails.java  CallFeature.java  (+43 more)
app/src/main/res-common/drawable/: bg_blue_button_normal.xml  bg_blue_button_pressed.xml  bg_green_button.xml  bg_green_button_pressed.xml  bg_spinner_settings.xml  ic_android.xml  ic_close.xml  ic_delete.xml  ic_launcher_background.xml  ic_save.xml
app/src/main/res-game/drawable/: bg_bid_history_tile.xml  bg_bid_history_tile_white.xml  bg_bid_pass.xml  bg_bidding_box.xml  bg_bidding_container.xml  bg_bidding_controls_box.xml  bg_bidding_controls_box_with_border.xml  bg_bidding_controls_green_fill.xml  bg_bidding_controls_outer.xml  bg_bidding_controls_outline.xml  bg_bidding_header.xml  bg_bidding_header_south.xml  bg_bidding_history_list.xml  bg_bidding_table_cell.xml  bg_bidding_table_cell_highlight.xml  bg_bidding_table_header.xml  bg_game_table_gradient.xml  bg_level_tab_selected.xml  bright_green_frame_black_sharp.xml  sel_bidding_level.xml  yellow_frame_black.xml
app/src/main/res-history/drawable/: bg_bottom_nav.xml  bg_top_nav.xml  bright_green_frame_black.xml
app/src/main/res-settings/drawable/: ic_bidding.xml  ic_difficulty.xml  ic_palette.xml
app/src/main/res-start/drawable/: bg_start_card.xml  ic_about.xml  ic_multi.xml  ic_person.xml
app/src/main/res/color/: nav_item_color.xml  sel_bidding_level_text.xml
app/src/main/res/drawable/: bg_blue__button_normal.xml  bg_blue__button_pressed.xml  bg_blue_button.xml  bg_bottom_nav.xml  bg_deal_button.xml  bg_deal_button_normal.xml  bg_deal_cards.xml  bg_game_table_gradient.xml  bg_green_arrow.xml  bg_green_button_normal.xml  bg_green_button_pressed.xml  bg_history_item.xml  bg_setting_option.xml  bg_settings_icon.xml  bg_spinner_settings.xml  bg_start_button.xml  bg_start_button_normal.xml  bg_start_card.xml  bg_top_nav.xml  bg_yellow_button.xml  bg_yellow_button_normal.xml  bg_yellow_button_pressed.xml  bright_green.xml  bright_green_frame_black.xml  bright_green_frame_black_sharp.xml  bright_green_frame_red.xml  bright_green_frame_yellow.xml  bright_green_frame_yellow_think_frame.xml  dark_green_white_frame.xml  divider_white.xml  green_frame.xml  green_win_in_row.xml  history_divider.xml  ic_autogame_foreground.xml  ic_cards.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_more.xml  ic_radio_tint_selector.xml  ic_statistic.xml  (+10 more)
app/src/main/res/drawable-anydpi/: ic_history.xml  ic_multiplayer.xml  ic_settings.xml  ic_singleplayer.xml  ic_star.xml  ic_take_rest.xml
app/src/main/res/layout/: activity_game.xml  activity_history.xml  activity_login.xml  activity_main.xml  activity_result.xml  activity_settings.xml  activity_start.xml  item_bid_tile.xml  item_card.xml  item_history.xml  layout_game_table.xml  layout_top_bar.xml  overlay_bidding.xml  overlay_bidding_controls.xml  overlay_history.xml  overlay_history_game.xml  overlay_history_list.xml  overlay_results.xml  overlay_settings.xml  overlay_statistic.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pl/: strings.xml
(+441 files in other folders)
